--- a/index.html
+++ b/index.html
@@ -536,7 +536,7 @@
                       <ul class="wrap-news-cont">
                         <li>
                           <div class="card-container">
-                            <a href="./html/tutor.html">
+                            <a href="#none">
                               <em>
                                 <div class="gototutorpage">
                                   <div class="wrap-click-here-icon">
